# tasks

./: .gitignore  CMakeLists.txt
checkio/: House_password.py  Median.py  Moore_Neighbourhood.py  Non-unique_Elements.py  Speech_Module.py  The_Most_Wanted_Letter.py  Xs_and_Os_Referee.py  absolute-sorting.py  adfgvx-cipher.py  binary-count.js  binary-count.py  bird-language.py  brackets.py  calculate-islands.py  cipher-map2.py  count-neighbours.js  currency-style.py  days-diff.py  digits-multiplication.py  friendly-number.py  good-radix.py  humpty-dumpty.py  index-power.py  largest-histogram.py  morse-clock.py  most-numbers.py  most-wanted-letter.js  network-attack.py  number-factory.py  number-radix.py  pawn-brotherhood.py  power-supply.py  right-to-left.py  rotate-hole.py  secret-message.py  shortest-knight-path.py  strange-curcuit.js  striped-words.py  the-square-chest.py  three-points-circle.py  (+6 more)
codefest_17/: a.cpp  b.cpp
codeforces_154/: a.cpp  b.cpp
codeforces_362/: a.cpp  b.cpp  c.cpp
codeforces_406/: b.cpp
codeforces_407/: a.cpp  b.cpp
codeforces_409/: b.cpp
codeforces_410/: a.cpp  b.cpp
codeforces_415/: c.cpp
codeforces_419/: a.cpp
codeforces_421/: a.cpp
codeforces_423/: b.cpp
codeforces_424/: b.cpp
codeforces_427/: a.cpp  c.cpp
codeforces_428/: a.cpp
codeforces_429/: b.cpp
codeforces_433/: b.cpp  c.cpp
codeforces_436/: b.cpp  c.cpp
codeforces_443/: a.cpp  c.cpp
codeforces_445/: b.cpp
codeforces_447/: c.cpp
codeforces_451/: b.cpp  c.cpp
codeforces_461/: b.cpp
codeforces_479/: a.cpp  c.cpp  e.cpp
codeforces_480/: a.cpp  b.cpp
codeforces_486/: a.cpp  b.cpp  c.cpp  d.cpp
codeforces_489/: a.cpp
codeforces_493/: a.cpp  b.cpp
codeforces_495/: a.cpp  c.cpp
codeforces_educational_28/: a.cpp
codeforces_educational_29/: b.cpp
codeforces_educational_30/: c.cpp
codeforces_educational_33/: a.cpp  b.cpp
codeforces_educational_37/: a.cpp  b.cpp
codeforces_educational_42/: c.cpp
codeforces_educational_43/: e.cpp
codewars/: a10n.py  alphabet_position.py  baker.py  beak_chocolate.py  bracket_check.py  counting_duplicates.js  digits-sum.py  exes_ohs.js  fusc.py  ip_valid.py  linear_regression.py  mobile_presses.js  name_format.py  nested_lists.py  odd_num_sum.py  prime.py  prime_factors.py  rgb_to_hex.py  scramblies.py  str_to_int.js  sum_reminder_int.py
hackerrank_101hack47/: 1.cpp
hackerrank_101hack49/: a.cpp
hh_school/: 1.cpp  2.cpp  5.cpp
hyperskill/: SumOfNeighbours.java
leetcode/: AccountsMerge.java  AllNodesDistanceKInBinaryTree.java  AmountOfNewAreaPaintedEachDay.java  BasicCalculator2.java  BinarySubarraysWithSum.java  ConstructBinaryTreeFromPreorderAndInorderTraversal.java  CountSquareSubmatricesWithAllOnes.java  CountingBits.java  DecodeWays.java  DeleteNodeInABst.java  FindAllPeopleWithSecret.java  HammingDistance.java  HouseRobber.java  IntervalListIntersections.java  IsAnagram.java  LargestNumber.java  LetterCombinations.java  LinkedListCycle.java  MinStack.java  MinimumFallingPathSum.java  MonotonicArray.java  MoveZeroes.java  RemoveLinkedListElements.java  ShortestDistanceToACharacter.java  SingleNumber.java  SplitArrayWithSameAverage.java  Subsets.java  SwimInRisingWater.java  WordBreak.java  add_binary.py  alien_dictionary.cpp  all_paths_from_source_to_target.cpp  android_unlock_patterns.cpp  arithmetic_slices.cpp  best_time_to_buy_and_sell_stock.cpp  binary_string_with_substrings_representing_1_to_n.cpp  binary_tree_coloring_game.cpp  binary_tree_inorder_traversal.cpp  binary_tree_level_order_traversal.cpp  binary_tree_maximum_path_sum.java  (+136 more)
misc/: bracket_sequence.cpp  edit_distance.cpp  is_palindrome.cpp  is_tree_bst.cpp  majority_elment.cpp  pair_sum_close_to_number.cpp  (+4 more)
(+197 files in other folders)
